updated pomolo and index

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -568,8 +568,8 @@ h6 {
 	font-family: 'Work Sans', sans-serif;
 	text-align:left;
 	margin-top: 140px;
-	font-size: 50px;
-	font-weight:500;
+	font-size: 70px;
+	font-weight:650;
 	letter-spacing: 0px;
 	text-transform: none;
 	color: #177add;
@@ -593,17 +593,17 @@ h6 {
 
 #hero h3 {
 	/* font-family: "Nunito", sans-serif; */
-	max-width: 500px;
-	font-family: "Inter", sans-serif;
+	max-width: 400px;
+	font-family: 'Mukta', sans-serif;
 	text-align: left;
 	margin-top:10px;
 	margin-right:auto;
 	font-size: 16px;
-	font-weight: 400;
-	letter-spacing: 0px;
+	font-weight: 350;
+	letter-spacing: 0.5px;
 	line-height:25px;
 	text-transform: none;
-	color: #3b3b3b;
+	color: #252525;
 	display: inline-block;
 
 	/* color: #1563b1; #1c87eb; #69c5cc; */
@@ -614,18 +614,18 @@ h6 {
 	width:200px; 
 	border-radius:15px;
 	background:#fff;
-	border:2px solid #177add;	
-	color: #3b3b3b;
+	border:2.5px solid #177add;	
+	color: #252525;
 	padding: 10px 0px 10px 0px;
 	margin-top:0px;
 	text-align: center;
 	justify-content: center;
 	text-decoration: none;
 	display: inline-block;
-	font-size: 13px;
-	font-family: "Inter", sans-serif;
-	font-weight:500;
-	letter-spacing:0px;
+	font-size: 16px;
+	font-family: 'Mukta', sans-serif;
+	font-weight:350;
+	letter-spacing:0.5px;
 }
 
 
@@ -1731,14 +1731,14 @@ section {
 .portfolio .image_title {
 	max-width:100%;
 	font-size:2.2vw;
-	font-family: "Work Sans", sans-serif;
+	font-family: 'Work Sans', sans-serif;
 	margin-top:25px;
 	margin-bottom:15px;
 	justify-content: center;
 	align-items: center;
 	text-align: center;
-	letter-spacing:0.5px;
-	font-weight: 500;
+	letter-spacing:1.5px;
+	font-weight: 530;
 	color: #ffffff;
 
 }
@@ -2517,13 +2517,13 @@ section {
 .blog .entry .subtitle1 {
 	text-align: left;
 	width:50%;
-	font-size: 14px;
-	font-weight: light;
+	font-size: 15px;
+	font-weight:500;
 	padding: 0;
 	margin: 20px 0 20px 0;
-	color: #000000;
+	color: #0E1126;
 	font-family: "Work Sans", sans-serif;
-	letter-spacing:1px;
+	letter-spacing:0.5px;
 	line-height:30px;
 }
 
@@ -2531,11 +2531,11 @@ section {
 	text-align: left;
 	width: 50%;
 	line-height: 25px;
-	font-size: 15px;
-	font-weight:normal;
+	font-size: 16px;
+	font-weight:350;
 	padding: 0;
 	margin: 20px 0 10% 0%;
-	color: #a0a0a0;
+	color: #999999;
 	font-family: 'Inter', sans-serif;
 	letter-spacing: 0.5px;
 	line-height: 30px;
@@ -2558,21 +2558,22 @@ section {
 	font-family: 'Amiko', sans-serif;
 	font-size: 2.3vh;
 	font-weight: 800;
+	letter-spacing: 0.5px;
 	margin-bottom: 15px;
 	letter-spacing: 0.3px;
-	color:#000000; 
+	color:#0E1126; 
 }
 
 .blog .entry .case-details p {
-	color: #a0a0a0;
+	color: #999999;
 	font-family: 'Inter', sans-serif;
 	font-size: 0.8em;
 	line-height: 28px;
 	font-weight: 400;
 	letter-spacing: 0.5px;
 	width:25%;
-		margin-left: auto;
-			margin-right: auto;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 @media screen and (max-width: 540px) {
@@ -2697,9 +2698,9 @@ section {
 	font-size: 16px; /* originally 16px*/
 	font-family: 'Inter', sans-serif;
 	letter-spacing: 0.5px;
-	color: #a0a0a0;
+	color: #999999;
 	/* color:#a0a0a0; */
-	font-weight:400;
+	font-weight:350;
 	width:100%;
 	margin:auto;
 	margin-bottom:0px;
@@ -2770,9 +2771,10 @@ section {
 	font-size: 30px;
 	margin-top: 0px;
 	margin-bottom:25px;
-	font-weight: 900;
-	letter-spacing:1px;
-	color: #000000;
+	font-weight: 700;
+	font-style:italic;
+	letter-spacing:0.5px;
+	color: #0E1126;
 	width: 100%;
 	margin-right: auto;
 	margin-left:auto;
@@ -2803,7 +2805,7 @@ section {
 }
 
 .blog .entry .entry-content blockquote p {
-	color: #3b3b3b;
+	color: #0E1126;
 	width:50%;
 	margin-left:25%;
 	line-height: 2;
