--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -612,10 +612,10 @@ h6 {
 #hero .button-box {
 	text-align:center; 
 	width:200px; 
-	border-radius:15px;
+	border-radius:5px;
 	background:#fff;
-	border:2.5px solid #177add;	
-	color: #252525;
+	border:2px solid #177add;	
+	color: #177add;
 	padding: 10px 0px 10px 0px;
 	margin-top:0px;
 	text-align: center;
@@ -624,7 +624,7 @@ h6 {
 	display: inline-block;
 	font-size: 16px;
 	font-family: 'Mukta', sans-serif;
-	font-weight:350;
+	font-weight:400;
 	letter-spacing:0.5px;
 }
 
@@ -1731,14 +1731,14 @@ section {
 .portfolio .image_title {
 	max-width:100%;
 	font-size:2.2vw;
-	font-family: 'Work Sans', sans-serif;
+	font-family: 'Mukta', sans-serif;
 	margin-top:25px;
 	margin-bottom:15px;
 	justify-content: center;
 	align-items: center;
 	text-align: center;
-	letter-spacing:1.5px;
-	font-weight: 530;
+	letter-spacing:0.5px;
+	font-weight: 500;
 	color: #ffffff;
 
 }
@@ -2679,10 +2679,10 @@ section {
 	justify-content: center;
 	text-decoration: none;
 	display: inline-block;
-	font-size: 15px;
-	font-family: "Amiko", sans-serif;
+	font-size: 16px;
+	font-family: "Mukta", sans-serif;
 	font-weight: 300px;
-	letter-spacing: 0px;
+	letter-spacing: 0.5px;
 	margin:auto;
 }
 
@@ -2806,8 +2806,8 @@ section {
 
 .blog .entry .entry-content blockquote p {
 	color: #0E1126;
-	width:50%;
-	margin-left:25%;
+	width:80%;
+	margin-left:10%;
 	line-height: 2;
 	margin-bottom: 0;
 	font-style: italic;
