--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -556,7 +556,6 @@ h6 {
 	flex-direction: column;
 	text-align: left; /* before: left*/
 	padding: 0 10px;
-
 	width:90%;
 	margin: 0 auto;
 }
@@ -1036,7 +1035,7 @@ section {
 	font-family: "Mukta", sans-serif;
 	font-size: 30px;
 	font-weight: bold;
-	margin-top: 28px;
+	margin-top: 0px;
 	margin-bottom: 25px;
 	margin-left: auto;
 	margin-right: auto;
@@ -1054,8 +1053,8 @@ section {
 	/* font-family: "Mukta", sans-serif; */
 	font-family: "Work Sans", sans-serif;
 	font-size: 30px;
-	font-weight: 500;
-	letter-spacing: 1px;
+	font-weight: 550;
+	letter-spacing: 0px;
 	width: 80%;
 	color: #177add;
 }
@@ -1083,13 +1082,15 @@ section {
 }
 
 .about-paragraph2 {
-	font-family: "Inter", sans-serif;
+	font-family: "Work Sans", sans-serif;
 	font-size: 17px;
 	line-height: 35px;
 	padding-bottom: 15px;
-	color: #3b3b3b;
+	color: #0E1126;
 	max-width: 100%;
 	height: auto;
+	font-weight:300px;
+	letter-spacing:0px;
 }
 
 .about-link {
@@ -1247,7 +1248,7 @@ section {
 .books-titleNL {
 	width: 100%;
 	height: 100%;
-	font-family: "Amiko", sans-serif;
+	font-family: "Work Sans", sans-serif;
 	font-size: 18px;
 	font-weight: bold;
 	letter-spacing: 1.5px;
@@ -2220,7 +2221,7 @@ section {
 	float: left;
 	width: 320px;
 	height: auto;
-	top: 60px;
+	top: 0px;
 	right: 100px;
 	max-width: 100%;
 }
