--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1048,13 +1048,13 @@ section {
 .about-title2 {
 	height: auto;
 	width: 100%;
-	margin-top: 13px;
+	margin-top: 0px;
 	margin-bottom: 35px;
 	/* font-family: "Mukta", sans-serif; */
 	font-family: "Work Sans", sans-serif;
 	font-size: 30px;
 	font-weight: 550;
-	letter-spacing: 0px;
+	letter-spacing: 0.3px;
 	width: 80%;
 	color: #177add;
 }
@@ -1082,15 +1082,15 @@ section {
 }
 
 .about-paragraph2 {
-	font-family: "Work Sans", sans-serif;
+	font-family: "Mukta", sans-serif;
 	font-size: 17px;
 	line-height: 35px;
 	padding-bottom: 15px;
 	color: #0E1126;
 	max-width: 100%;
 	height: auto;
-	font-weight:300px;
-	letter-spacing:0px;
+	font-weight:300;
+	letter-spacing:0.3px;
 }
 
 .about-link {
@@ -1248,7 +1248,7 @@ section {
 .books-titleNL {
 	width: 100%;
 	height: 100%;
-	font-family: "Work Sans", sans-serif;
+	font-family: "Amiko", sans-serif;
 	font-size: 18px;
 	font-weight: bold;
 	letter-spacing: 1.5px;
@@ -1288,7 +1288,7 @@ section {
 	transform: translate(-50%, -50%);
 }
 .books-list {
-	width:90%;
+	width:95%;
 	max-height: 30%;
 	margin-top: 5px;
 	text-align: left;
