--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -609,7 +609,6 @@ h6 {
 }
 
 #hero .button-box {
-	text-align:center; 
 	width:200px; 
 	border-radius:5px;
 	background:#fff;
@@ -629,6 +628,32 @@ h6 {
 
 
 #hero .button-box:hover {
+	color: #ffffff;
+	background: #177add;
+	transition: 0.3s;
+}
+
+
+/* submit button for password protected page */
+input[type=submit] {
+	width: 200px;
+		border-radius: 5px;
+		background: #fff;
+		border: 2px solid #177add;
+		color: #177add;
+		padding: 10px 0px 10px 0px;
+		margin-top: 0px;
+		text-align: center;
+		justify-content: center;
+		text-decoration: none;
+		display: inline-block;
+		font-size: 16px;
+		font-family: 'Mukta', sans-serif;
+		font-weight: 400;
+		letter-spacing: 0.5px;
+}
+
+input:hover[type=submit] {
 	color: #ffffff;
 	background: #177add;
 	transition: 0.3s;
