added bala and chip

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1817,11 +1817,11 @@ section {
 	align-items: center;
 	text-align: center;
 	width:90%;
-	font-family: "Inter", sans-serif;
-	color: #ffffff87;
+	font-family: "Mukta", sans-serif;
+	color: #fff;
 	margin-top: 3px;
 	letter-spacing: 2px;
-	font-weight:450;
+	font-weight:300;
 }
 
 /* end */
