--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -633,6 +633,31 @@ h6 {
 	transition: 0.3s;
 }
 
+/* password box  */
+input[type=password] {
+	width: 400px;
+	text-align:justify;
+	border-radius: 5px;
+	background: rgb(242, 242, 242);
+	border: 2px solid #fff;
+	color: #177add;
+	padding: 10px 0px 10px 12px;
+	text-align: left;
+	display: inline-block;
+	font-size: 16px;
+	font-family: 'Mukta', sans-serif;
+	font-weight: 400;
+	letter-spacing: 0.5px;
+}
+
+.container form .error-text {
+	background: #F8D7DA;
+	padding: 8px 0;
+	border-radius: 5px;
+	color: #8B3E46;
+	border: 1px solid #F5C6CB;
+	display: none;
+}
 
 /* submit button for password protected page */
 input[type=submit] {
