--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1298,10 +1298,10 @@ section {
 .books-titleNL {
 	width: 100%;
 	height: 100%;
-	font-family: "Amiko", sans-serif;
+	font-family: "Work Sans", sans-serif;
 	font-size: 18px;
-	font-weight: bold;
-	letter-spacing: 1.5px;
+	font-weight: 550;
+	letter-spacing: 0.5px;
 	color: #177add;
 	transition: 0.3s;
 
