--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -567,7 +567,7 @@ h6 {
 	font-family: 'Work Sans', sans-serif;
 	text-align:left;
 	margin-top: 140px;
-	font-size: 70px;
+	font-size: 5vw;
 	font-weight:650;
 	letter-spacing: 0px;
 	text-transform: none;
@@ -592,17 +592,17 @@ h6 {
 
 #hero h3 {
 	/* font-family: "Nunito", sans-serif; */
-	max-width: 400px;
+	max-width: 500px;
 	font-family: 'Mukta', sans-serif;
 	text-align: left;
 	margin-top:10px;
 	margin-right:auto;
-	font-size: 16px;
+	font-size: 13pt;
 	font-weight: 350;
 	letter-spacing: 0.5px;
 	line-height:25px;
 	text-transform: none;
-	color: #252525;
+	color: #0E1126;
 	display: inline-block;
 
 	/* color: #1563b1; #1c87eb; #69c5cc; */
@@ -1668,7 +1668,7 @@ section {
 	left: 0%;
 	width: 100%;
 	height: 100%;
-	background: #ffffffbb; /* portfolio img hover 3587da #00000073; */
+	background: #ffffff; /* portfolio img hover 3587da #00000073; */
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -1684,7 +1684,7 @@ section {
 	left: 0%;
 	width: 100%;
 	height: 100%;
-	background: #00000073;
+	background: #ffffff;
 	/* portfolio img hover 3587da #00000073; */
 	display: flex;
 	flex-direction: column;
@@ -1781,16 +1781,16 @@ section {
 
 .portfolio .image_title {
 	max-width:100%;
-	font-size:2.2vw;
+	font-size:2.3vw;
 	font-family: 'Mukta', sans-serif;
 	margin-top:25px;
-	margin-bottom:15px;
+	margin-bottom:0px;
 	justify-content: center;
 	align-items: center;
 	text-align: center;
-	letter-spacing:0.5px;
-	font-weight: 500;
-	color: #ffffff;
+	letter-spacing:1px;
+	font-weight: 550;
+	color: #177add;
 
 }
 
@@ -1843,7 +1843,7 @@ section {
 	text-align: center;
 	width:90%;
 	font-family: "Mukta", sans-serif;
-	color: #fff;
+	color: #c3c3c3;
 	margin-top: 3px;
 	letter-spacing: 2px;
 	font-weight:300;
