--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1998,6 +1998,16 @@ section {
 	border-bottom: 1px solid #eee;
 }
 
+.portfolio-details .portfolio-info hr {
+	border: none;
+	border-top: 3px dotted #f00;
+	color: #fff;
+	background-color: #fff;
+	height: 1px;
+	width: 50%;
+	margin-top:50px;
+}
+
 .portfolio-details .portfolio-info ul {
 	list-style: none;
 	padding: 0;
