--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1102,7 +1102,7 @@ section {
 	margin-top: 0px;
 	margin-bottom: 35px;
 	/* font-family: "Mukta", sans-serif; */
-	font-family: "Work Sans", sans-serif;
+	font-family: "Roboto", sans-serif;
 	font-size: 40px;
 	font-weight: 550;
 	letter-spacing: 0.3px;
