--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,7 +26,7 @@ a:hover {
 a.class1 {
 	/* twitter, instagram, linkedin, spotify links at bottom */
 	display: inline-block;
-	color: #3b3b3b; /* before: 1973cc // beforebefore: #1563b1;*/
+	color: #0F1126; /* before: 1973cc // beforebefore: #1563b1;*/
 	font-size: 40px;
 	letter-spacing: -10px;
 	transform: scale(0.5);
@@ -196,7 +196,7 @@ h6 {
 	/* IRENE LUE logo */
 	font-family: "Amiko", sans-serif;
 	color: #3b3b3b;
-	font-size: 16px;
+	font-size: 13px;
 	font-weight: 600;
 	padding: 0 4px;
 	white-space: nowrap;
@@ -209,6 +209,7 @@ h6 {
 
 #header .logo a {
 	color: #3b3b3b; /* Irene Lue logo */
+	font-size:16px;
 }
 
 #header .logo img {
@@ -571,7 +572,7 @@ h6 {
 	font-weight:650;
 	letter-spacing: 0px;
 	text-transform: none;
-	color: #177add;
+	color: #57cdd4;/* 177add; 57cdd4 57ced4ae*/
 	display:inline-block;
 	padding-top:100px;
 	/* color: #1563b1; #1c87eb; #69c5cc; */
@@ -593,16 +594,16 @@ h6 {
 #hero h3 {
 	/* font-family: "Nunito", sans-serif; */
 	max-width: 500px;
-	font-family: 'Mukta', sans-serif;
+	font-family: 'Montserrat', sans-serif;
 	text-align: left;
 	margin-top:10px;
 	margin-right:auto;
-	font-size: 13pt;
+	font-size: 11pt;
 	font-weight: 350;
-	letter-spacing: 0.5px;
+	letter-spacing: 0.3px;
 	line-height:25px;
 	text-transform: none;
-	color: #0E1126;
+	color: #999;
 	display: inline-block;
 
 	/* color: #1563b1; #1c87eb; #69c5cc; */
@@ -611,9 +612,9 @@ h6 {
 #hero .button-box {
 	width:200px; 
 	border-radius:10px;
-	background:#fff;
-	border:2px solid #177add;	
-	color: #177add;
+	background:white;
+	border:1.4px solid #ababab; /*177add; 57ced4ae	0E1126*/
+	color: #ababab;
 	padding: 10px 0px 10px 0px;
 	margin-top:0px;
 	margin-bottom:8px;
@@ -624,14 +625,16 @@ h6 {
 	font-size: 16px;
 	font-family: 'Mukta', sans-serif;
 	font-weight:400;
-	letter-spacing:0.5px;
+	letter-spacing:0.3px;
 }
 
 
 #hero .button-box:hover {
-	color: #ffffff;
-	background: #177add;
-	transition: 0.3s;
+	color: white;
+	border: 1.5px solid white;
+			/*177add; 57ced4ae	0E1126*/
+	background: #57cdd4;
+	transition: 0.2s;
 }
 
 /* password box  */
@@ -1102,12 +1105,12 @@ section {
 	margin-top: 0px;
 	margin-bottom: 35px;
 	/* font-family: "Mukta", sans-serif; */
-	font-family: "Roboto", sans-serif;
-	font-size: 40px;
-	font-weight: 550;
-	letter-spacing: 0.3px;
+	font-family: "Amiko", sans-serif;
+	font-size: 25px;
+	font-weight: 800;
+	letter-spacing: 1px;
 	width: 80%;
-	color: #177add;
+	color: #0F1126; /*#177add; #1fc5e3; #58bc6a; */
 }
 
 .about-subtitle {
@@ -1133,11 +1136,11 @@ section {
 }
 
 .about-paragraph2 {
-	font-family: "Mukta", sans-serif;
-	font-size: 17px;
-	line-height: 35px;
+	font-family: "Montserrat", sans-serif;
+	font-size: 15px;
+	line-height: 30px;
 	padding-bottom: 15px;
-	color: #0E1126;
+	color: #999999;
 	max-width: 100%;
 	height: auto;
 	font-weight:300;
@@ -1146,13 +1149,13 @@ section {
 
 .about-link {
 	/* margin-top: 20px; */
-	font-weight: 500;
-	color: #177add;
-	transition: 0.3s;
+	font-weight: 300;
+	color: #83909f9c;
+	transition: 0.2s;
 }
 
 .about-link:hover {
-	color: #4fa7ff;
+	color: #ffd438;
 }
 
 .about .content h3 {
@@ -1331,7 +1334,7 @@ section {
 	font-size: 0.8vw;
 	font-family: "Work Sans", sans-serif;
 	font-weight: lighter;
-	letter-spacing: 3px;
+	letter-spacing: 1px;
 	font-weight: 550;
 	color: #000000;
 	top: 20%;
@@ -1344,12 +1347,12 @@ section {
 	margin-top: 5px;
 	text-align: left;
 	font-size: 0.75vw;
-	font-family: "Work Sans", sans-serif;
+	font-family: "Montserrat", sans-serif;
 	font-weight: lighter;
 	line-height: 1.5vw;
-	letter-spacing: 1px;
-	font-weight: 500;
-	color: #000000;
+	letter-spacing: 0.3px;
+	font-weight: 300;
+	color: #7b7b7b;
 	position: absolute;
 	top: 45%;
 	left:10vw;
@@ -2548,13 +2551,21 @@ section {
 # Blog
 --------------------------------------------------------------*/
 .blog {
-	padding: 40px 0 20px 0px;
+	padding: 20px 0 20px 0px;
 }
 
 .blog .entry {
 	padding: 30px;
 	margin-bottom: 60px;
 	/* box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1); */
+}
+
+.blog .entry h1 {
+	color: #999; /* 0F1126 */
+	font-size:15px;
+	font-family: "Montserrat", sans-serif;
+	margin-bottom:50px;
+	font-weight:300;
 }
 
 .blog .entry .entry-img {
@@ -2639,11 +2650,11 @@ section {
 
 .blog .entry .case-details p {
 	color: #999999;
-	font-family: 'Work Sans', sans-serif; /* Inter */
+	font-family: 'Montserrat', sans-serif; /* Inter */
 	font-size: 0.8em;
 	line-height: 25px;
-	font-weight: 400;
-	letter-spacing: 0.5px;
+	font-weight: 300;
+	letter-spacing: 0.3px;
 
 	margin-left: auto;
 	margin-right: auto;
@@ -3349,6 +3360,8 @@ body {
 /*--------------------------------------------------------------
 # Footer
 --------------------------------------------------------------*/
+
+
 #footer {
 	color: #3b3b3b;
 	font-size: 14px;
@@ -3356,14 +3369,23 @@ body {
 	box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
 }
 
+/* end of page filled background */
+.footer {
+	padding-top: 11rem;
+	padding-bottom: 8rem;
+	background-color: #57cdd4; /* yellow - ffc800 f0c733   aqua - 27c8d0 57cdd4*/ 
+	color: #fff;
+}
+
 #footer .footer-top {
 	padding: 20px 0 30px 0;
-	background: #fff;
+	background: #d31313;
 }
 
 #footer .footer-top .footer-contact {
 	margin-bottom: 30px;
 }
+
 
 #footer .footer-top .footer-contact h4 {
 	font-size: 22px;
