--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -565,14 +565,16 @@ h6 {
 #hero h1 {
 	/* font-family: "Nunito", sans-serif; */
 	width: 100%;
-	font-family: 'Work Sans', sans-serif;
+	/* font-family: 'Work Sans', sans-serif; */
+	font-family: 'Permanent Marker', cursive; 
 	text-align:left;
 	margin-top: 140px;
-	font-size: 5vw;
+	margin-bottom:10px;
+	font-size: 6vw;
 	font-weight:650;
 	letter-spacing: 0px;
 	text-transform: none;
-	color: #57cdd4;/* 177add; 57cdd4 57ced4ae*/
+	color: #5abad5;/* 177add; 57cdd4 57ced4ae*/
 	display:inline-block;
 	padding-top:100px;
 	/* color: #1563b1; #1c87eb; #69c5cc; */
@@ -613,10 +615,10 @@ h6 {
 	width:200px; 
 	border-radius:10px;
 	background:white;
-	border:1.4px solid #ababab; /*177add; 57ced4ae	0E1126*/
-	color: #ababab;
+	border:1.4px solid #5abad5; /*177add; 57ced4ae	0E1126*/
+	color: #5abad5;
 	padding: 10px 0px 10px 0px;
-	margin-top:0px;
+	margin-top:10px;
 	margin-bottom:8px;
 	text-align: center;
 	justify-content: center;
@@ -633,8 +635,8 @@ h6 {
 	color: white;
 	border: 1.5px solid white;
 			/*177add; 57ced4ae	0E1126*/
-	background: #57cdd4;
-	transition: 0.2s;
+	background: #5abad5;
+	transition: 0.3s;
 }
 
 /* password box  */
@@ -1104,9 +1106,9 @@ section {
 	width: 100%;
 	margin-top: 0px;
 	margin-bottom: 35px;
-	/* font-family: "Mukta", sans-serif; */
-	font-family: "Amiko", sans-serif;
-	font-size: 25px;
+	font-family: 'Permanent Marker', cursive;
+	/* font-family: "Amiko", sans-serif; */
+	font-size: 40px;
 	font-weight: 800;
 	letter-spacing: 1px;
 	width: 80%;
@@ -1155,7 +1157,7 @@ section {
 }
 
 .about-link:hover {
-	color: #ffd438;
+	color: #5abad5;
 }
 
 .about .content h3 {
@@ -1223,6 +1225,8 @@ section {
 	margin: auto;
 	/* margin-bottom: 40px; */
 }
+
+
 
 .instagram-title-box {
 	margin-top: 60px;
@@ -1688,7 +1692,7 @@ section {
 	left: 0%;
 	width: 100%;
 	height: 100%;
-	background: #00000077;
+	background: #00000077; /* 5abad5 00000077*/
 	/* portfolio img hover 3587da #00000073; */
 	display: flex;
 	flex-direction: column;
@@ -1785,7 +1789,7 @@ section {
 
 .portfolio .image_title {
 	max-width:100%;
-	font-size:2.3vw;
+	font-size:1.3vw;
 	font-family: 'Mukta', sans-serif;
 	margin-top:25px;
 	margin-bottom:0px;
@@ -1793,9 +1797,20 @@ section {
 	align-items: center;
 	text-align: center;
 	letter-spacing:1px;
-	font-weight: 550;
+	font-weight: 500;
 	color: #fff;
 
+}
+
+.portfolio h1 {
+	color: #999;
+		/* 0F1126 */
+		font-size: 15px;
+		font-family: "Montserrat", sans-serif;
+		border: white solid 1px;
+		margin-top: 0px;
+		margin-bottom: 35px;
+		font-weight: 300;
 }
 
 .portfolio h2 {
@@ -1847,7 +1862,7 @@ section {
 	text-align: center;
 	width:90%;
 	font-family: "Mukta", sans-serif;
-	color: #c3c3c3;
+	color: #fff; /*c3c3c3*/
 	margin-top: 3px;
 	letter-spacing: 2px;
 	font-weight:300;
@@ -2564,7 +2579,9 @@ section {
 	color: #999; /* 0F1126 */
 	font-size:15px;
 	font-family: "Montserrat", sans-serif;
-	margin-bottom:50px;
+	border: white solid 1px;
+	margin-top: 0px;
+	margin-bottom:35px;
 	font-weight:300;
 }
 
@@ -2580,11 +2597,12 @@ section {
 .blog .entry .title1 {
 	max-width:100%;
 	text-align: left;
-	font-size: 40px;
+	font-size: 50px; /* before - 40*/
 	font-weight: 550;
 	padding: 0;
 	margin: 50px 0 15px 0;
-	font-family: "Work Sans", sans-serif;
+	/* font-family: "Work Sans", sans-serif; */
+	font-family: 'Permanent Marker', cursive;
 	color: #177add;
 }
 
@@ -2610,7 +2628,8 @@ section {
 	padding: 0;
 	margin: 20px 0 10% 0%;
 	color: #999999;
-	font-family: 'Work Sans', sans-serif;
+	/* font-family: 'Work Sans', sans-serif; */
+	font-family: 'Montserrat', sans-serif;
 	letter-spacing: 0.5px;
 	line-height: 30px;
 }
@@ -3373,8 +3392,15 @@ body {
 .footer {
 	padding-top: 11rem;
 	padding-bottom: 8rem;
-	background-color: #57cdd4; /* yellow - ffc800 f0c733   aqua - 27c8d0 57cdd4*/ 
+	background-color: #5abad5; /* yellow - ffc800 f0c733   aqua - #5abad5 3dbdc4 27c8d0 57cdd4*/ 
 	color: #fff;
+}
+
+.footer h6 {
+	font-size:13px;
+	font-family: "Amiko", sans-serif;
+	font-weight:500;
+	letter-spacing: 0.3px;
 }
 
 #footer .footer-top {
