--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -596,11 +596,11 @@ h6 {
 #hero h3 {
 	/* font-family: "Nunito", sans-serif; */
 	max-width: 500px;
-	font-family: 'Montserrat', sans-serif;
+	font-family: 'Mukta', sans-serif;
 	text-align: left;
-	margin-top:10px;
+	margin-top:15px;
 	margin-right:auto;
-	font-size: 11pt;
+	font-size: 12pt;
 	font-weight: 350;
 	letter-spacing: 0.3px;
 	line-height:25px;
@@ -1160,6 +1160,17 @@ section {
 	color: #5abad5;
 }
 
+.about-link2 {
+	/* margin-top: 20px; */
+	font-weight: 300;
+	color: #999;
+	transition: 0.2s;
+}
+
+.about-link2:hover {
+	color: #999999a7;
+}
+
 .about .content h3 {
 	font-weight: 600;
 	font-size: 26px;
@@ -1676,7 +1687,7 @@ section {
 	left: 0%;
 	width: 100%;
 	height: 100%;
-	background: #ffffff; /* portfolio img hover 3587da #00000073; */
+	background: #52b4cfca; /* portfolio img hover 3587da #00000073; */
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -1789,14 +1800,15 @@ section {
 
 .portfolio .image_title {
 	max-width:100%;
-	font-size:1.8vw;
-	font-family: 'Mukta', sans-serif;
+	font-size:2vw;
+	font-family: 'Amiko', sans-serif;
 	/* font-family: 'Permanent Marker', cursive; */
 	margin-top:25px;
 	margin-bottom:0px;
-	justify-content: center;
-	align-items: center;
 	text-align: center;
+	/* justify-content: center; 
+	align-items: center;
+	text-align: center; */
 	letter-spacing:0.3px;
 	font-weight: 700;
 	color: #fff;
@@ -1857,12 +1869,12 @@ section {
 }
 
 .portfolio .image_description {
-	font-size: 0.8vw;
+	font-size: 1vw;
 	justify-content: center;
 	align-items: center;
 	text-align: center;
 	width:90%;
-	font-family: "Work Sans", sans-serif;
+	font-family: "Mukta", sans-serif;
 	color: #fff; /*c3c3c3*/
 	margin-top: 3px;
 	letter-spacing: 1px;
@@ -2625,14 +2637,15 @@ section {
 	width: 50%;
 	line-height: 25px;
 	font-size: 16px;
-	font-weight:350;
+	font-weight:300;
 	padding: 0;
 	margin: 20px 0 10% 0%;
 	color: #999999;
 	/* font-family: 'Work Sans', sans-serif; */
-	font-family: 'Montserrat', sans-serif;
-	letter-spacing: 0.5px;
+	font-family: 'Mukta', sans-serif;
+	letter-spacing: 0.3px;
 	line-height: 30px;
+	
 }
 
 .blog .entry .case-details {
@@ -2650,7 +2663,7 @@ section {
 
 .blog .entry .case-details h2 {
 	font-family: 'Amiko', sans-serif;
-	font-size: 2.5vh;
+	font-size: 15px;
 	font-weight: 800;
 	letter-spacing: 0.5px;
 	margin-bottom: 15px;
@@ -2776,23 +2789,23 @@ section {
 	width: 300px;
 	border-radius: 5px;
 	background: #fff;
-	border: 2px solid #177add;
-	color: #177add;
+	border: 2px solid #F2CC5C;
+	color: #ecc44e;
 	padding: 20px 0px 20px 0px;
 	text-align: center;
 	justify-content: center;
 	text-decoration: none;
 	display: inline-block;
-	font-size: 16px;
-	font-family: "Mukta", sans-serif;
-	font-weight: 300px;
-	letter-spacing: 0.5px;
+	font-size: 13px;
+	font-family: "Amiko", sans-serif;
+	font-weight: 500;
+	letter-spacing: 0.3px;
 	margin:auto;
 }
 
 .blog .entry .entry-buttons:hover {
 	color: #ffffff;
-	background: #177add;
+	background: #F2CC5C;
 	transition: 0.3s;
 }
 
