--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1687,7 +1687,7 @@ section {
 	left: 0%;
 	width: 100%;
 	height: 100%;
-	background: #52b4cfca; /* portfolio img hover 3587da #00000073; */
+	background: #0000008b; /* portfolio img hover 3587da #00000073; #52b4cfca */
 	display: flex;
 	flex-direction: column;
 	align-items: center;
