--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -570,7 +570,7 @@ h6 {
 	/* font-family: -apple-system, system-ui, BlinkMacSystemFont; */
 	/* font-family: 'Permanent Marker', cursive;  */
 	text-align:left;
-	margin-top: 80px;
+	margin-top: 100px;
 	margin-bottom:10px;
 	font-size: 6vw;
 	font-weight:700;
@@ -596,7 +596,7 @@ h6 {
 
 #hero h3 {
 	/* font-family: "Nunito", sans-serif; */
-	max-width: 35vw;
+	max-width: 100%;
 	font-family: 'Mukta', sans-serif;
 	text-align: left;
 	margin-top:15px;
