--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1167,7 +1167,7 @@ section {
 .about-link2 {
 	/* margin-top: 20px; */
 	font-weight: 300;
-	color: #999;
+	color: #6a6a6a;
 	transition: 0.2s;
 }
 
@@ -2636,9 +2636,9 @@ section {
 	font-weight: 550;
 	padding: 0;
 	margin: 50px 0 15px 0;
-	/* font-family: "Work Sans", sans-serif; */
-	font-family: 'Permanent Marker', cursive;
-	color: #177add;
+	font-family: "Roboto", sans-serif;
+	/* font-family: 'Permanent Marker', cursive; */
+	color: #0E1126;
 }
 
 .blog .entry .subtitle1 {
@@ -2658,14 +2658,14 @@ section {
 	text-align: left;
 	width: 65%;
 	line-height: 25px;
-	font-size: 16px;
-	font-weight:300;
+	font-size: 15px;
+	font-weight:350;
 	padding: 0;
 	margin: 20px 0 10% 0%;
-	color: #999999;
+	color: #6a6a6a;
 	/* font-family: 'Work Sans', sans-serif; */
-	font-family: 'Mukta', sans-serif;
-	letter-spacing: 0.3px;
+	font-family: 'Roboto', sans-serif;
+	letter-spacing: 0px;
 	line-height: 30px;
 	
 }
@@ -2720,13 +2720,12 @@ section {
 }
 
 .blog .entry .case-details p {
-	color: #999999;
-	font-family: 'Mukta', sans-serif; /* Inter */
-	font-size: 0.9em;
+	color: #6a6a6a;
+	font-family: 'Roboto', sans-serif; /* Inter */
+	font-size: 0.8em;
 	line-height: 25px;
 	font-weight: 300;
-	letter-spacing: 0.3px;
-
+	letter-spacing: 0px;
 	margin-left: auto;
 	margin-right: auto;
 }
@@ -2928,10 +2927,10 @@ section {
 
 .blog .entry .entry-content p {
 	line-height: 30px;
-	font-size: 16px; /* originally 16px*/ 
-	font-family: 'Mukta', sans-serif; /* Work Sans */
-	letter-spacing: 0.3px;
-	color: #999999;
+	font-size: 15px; /* originally 16px*/ 
+	font-family: 'Roboto', sans-serif; /* Work Sans */
+	letter-spacing: 0px;
+	color: #6a6a6a;
 	/* color:#a0a0a0; */
 	font-weight:300;
 	width:100%;
