--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1806,7 +1806,7 @@ section {
 
 .portfolio .image_title {
 	max-width:100%;
-	font-size:1.5vw;
+	font-size:1.3vw;
 	font-family: 'Amiko', sans-serif;
 	/* font-family: 'Permanent Marker', cursive; */
 	margin-top:25px;
@@ -1881,7 +1881,7 @@ section {
 	text-align: center;
 	width:90%;
 	font-family: "Mukta", sans-serif;
-	color: #fff; /*c3c3c3*/
+	color: #ffffffb6; /*c3c3c3*/
 	margin-top: 10px;
 	letter-spacing: 1px;
 	font-weight:300;
