--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -567,17 +567,19 @@ h6 {
 #hero h1 {
 	/* font-family: "Nunito", sans-serif; */
 	width: 100%;
-	font-family: "Work Sans", sans-serif;
+	font-family: "Amiko", sans-serif;
 	/* font-family: 'Work Sans', sans-serif; */
 	/* font-family: -apple-system, system-ui, BlinkMacSystemFont; */
 	/* font-family: 'Permanent Marker', cursive;  */
 	text-align:left;
 	margin-top: 100px;
 	margin-bottom:10px;
-	font-size: 4.9vw;
+	font-size: 4vw;
 	font-weight:700;
 	text-transform: none;
-	color: #55b0d7;/* 5abad5 177add; 57cdd4 57ced4ae*/
+	color: #55b0d7;
+	/* color: #55b0d7; */
+	/* 5abad5 177add; 57cdd4 57ced4ae*/
 	display:inline-block;
 	padding-top:100px;
 	/* color: #1563b1; #1c87eb; #69c5cc; */
@@ -618,14 +620,16 @@ h6 {
 #hero .button-box {
 	width:15vw;
 	border-radius:10px;
-	background:white;
+	background:#55b0d7;
 	border:1.4px solid #55b0d7; /*  5abad5 177add; 57ced4ae	0E1126*/
-	color: #55b0d7; /* 5abad5 */
+		color: #fff;
+			/* color: #55b0d7; */
+	/* 5abad5 */
 	padding: 10px 0px 10px 0px;
 	margin-top:10px;
 	margin-bottom:8px;
 	text-align: center;
-	justify-content: center;
+	justify-content: left;
 	text-decoration: none;
 	display: inline-block;
 	font-size: 13px;
@@ -639,7 +643,7 @@ h6 {
 	color: white;
 	border: 1.5px solid white;
 			/*177add; 57ced4ae	0E1126*/
-	background: #55b0d7; /* 5abad5 */
+	background: #55b0d7bc; /* 5abad5 */
 	transition: 0.3s;
 }
 
@@ -1862,12 +1866,13 @@ section {
 }
 
 .portfolio .case_title {
-	font-size: 1.7vw;
-	font-family: "Work Sans", sans-serif;
+	font-size: 1.1vw;
+	font-family: "Amiko", sans-serif;
+	text-transform: uppercase;
 	text-align: left;
-	font-weight: 600;
+	font-weight: 800;
 	letter-spacing: 0.1px;
-	color: #0e1126d5;
+	color: #55b0d7;
 	padding-bottom:0px;
 	padding-top: 20px;
 	border:white 1px solid;
@@ -1881,11 +1886,11 @@ section {
 	text-align: left;
 	width: 100%;
 	font-family: "Work Sans", sans-serif;
-	color: #0e11268d;
+	color: #999999;
 	/*c3c3c3*/
 	margin-top: 5px;
-	letter-spacing: 0.1px;
-	font-weight: 400;
+	letter-spacing: 0.3px;
+	font-weight: 300;
 }
 
 /* for about me, instagram pics hover text */
@@ -3597,7 +3602,7 @@ body {
 .footer {
 	padding-top: 11rem;
 	padding-bottom: 8rem;
-	background-color: #55b0d7; /* yellow - ffc800 f0c733   aqua - #5abad5 3dbdc4 27c8d0 57cdd4*/ 
+	background-color: #55b0d7; /*#55b0d7; yellow - ffc800 f0c733   aqua - #5abad5 3dbdc4 27c8d0 57cdd4*/ 
 	color: #fff;
 }
 
