--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -508,7 +508,7 @@ h6 {
 --------------------------------------------------------------*/
 #hero {
 	width: 100%;
-	height: 650px;
+	height: 700px;
 	margin-top:2vw;
 
 	/* this is to add a gradient or darker opacity to background image */
@@ -549,18 +549,11 @@ h6 {
 
 #hero .hero-container {
 	position: absolute;
-	bottom: 100;
-	top: 0;
-	left: 0;
-	right: 0;
 	display: flex;
 	justify-content: center;
-	align-items: left; /* before: left*/
 	flex-direction: column;
-	text-align: left; /* before: left*/
-	padding: 0 0px;
-	width:90%;
-	margin: 0 auto;
+	max-width:auto;
+	margin: auto;
 }
 
 /* home page title 1 */
@@ -574,14 +567,14 @@ h6 {
 	text-align:left;
 	margin-top: 100px;
 	margin-bottom:10px;
-	font-size: 4vw;
+	font-size: 70px;
 	font-weight:700;
 	text-transform: none;
 	color: #55b0d7;
 	/* color: #55b0d7; */
 	/* 5abad5 177add; 57cdd4 57ced4ae*/
 	display:inline-block;
-	padding-top:100px;
+	
 	/* color: #1563b1; #1c87eb; #69c5cc; */
 }
 
@@ -600,16 +593,15 @@ h6 {
 
 #hero h3 {
 	/* font-family: "Nunito", sans-serif; */
-	width: 37vw;
+	width: 100%;
 	font-family: 'Work Sans', sans-serif;
 	text-align: left;
 	margin-top:10px;
 	margin-bottom:20px;
-	margin-right:auto;
-	font-size: 1.1vw;
+	font-size: 18px;
 	font-weight: 350;
 	letter-spacing: 0.3px;
-	line-height:1.8vw;
+	line-height:1.5;
 	text-transform: none;
 	color: #999; /* #374151 */
 	display: inline-block;
@@ -618,7 +610,7 @@ h6 {
 }
 
 #hero .button-box {
-	width:15vw;
+	width:45%;
 	border-radius:10px;
 	background:#55b0d7;
 	border:1.4px solid #55b0d7; /*  5abad5 177add; 57ced4ae	0E1126*/
@@ -626,16 +618,14 @@ h6 {
 			/* color: #55b0d7; */
 	/* 5abad5 */
 	padding: 10px 0px 10px 0px;
-	margin-top:10px;
-	margin-bottom:8px;
+	margin:auto;
 	text-align: center;
-	justify-content: left;
-	text-decoration: none;
 	display: inline-block;
 	font-size: 13px;
 	font-family: 'Work Sans', sans-serif;
 	font-weight:400;
 	letter-spacing:0px;
+	left:-50px;
 }
 
 
@@ -1866,7 +1856,7 @@ section {
 }
 
 .portfolio .case_title {
-	font-size: 1.1vw;
+	font-size: 18px;
 	font-family: "Amiko", sans-serif;
 	text-transform: uppercase;
 	text-align: left;
@@ -1880,7 +1870,7 @@ section {
 }
 
 .portfolio .case_descrip {
-	font-size: 1vw;
+	font-size: 15px;
 	justify-content: center;
 	align-items: center;
 	text-align: left;
@@ -2413,10 +2403,7 @@ section {
 /* added for profile picture positioning */
 .team .member .prof-pic {
 	float: left;
-	width: 50vw;
 	height: auto;
-	top: 0px;
-	right: 100px;
 	max-width: 100%;
 }
 
