--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1344,7 +1344,7 @@ section {
 
 .books-middle {
 	position: absolute;
-	font-size: 0.8vw;
+	font-size: 12px;
 	font-family: "Work Sans", sans-serif;
 	font-weight: lighter;
 	letter-spacing: 1px;
@@ -1360,16 +1360,16 @@ section {
 	max-height: 30%;
 	margin-top: 5px;
 	text-align: left;
-	font-size: 0.8vw;
+	font-size: 10px;
 	font-family: "Mukta", sans-serif;
 	font-weight: lighter;
-	line-height: 1.3vw;
+	line-height: 18px;
 	letter-spacing: 0.5px;
 	font-weight: 300;
 	color: #7b7b7b;
 	position: absolute;
 	top: 45%;
-	left:8.7vw;
+	left:50%;
 	transform: translate(-50%, -50%);
 	border: clear 1px solid;
 }
