--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3006,14 +3006,13 @@ section {
 }
 
 .blog .entry .entry-content ol {
-	line-height: 35px;
-	font-size: 16px;
+	line-height: 30px;
+	font-size: 15px;
 	/* originally 16px*/
-	font-family: 'Work Sans', sans-serif; /* Inter */
-	letter-spacing: 0.5px;
-	color: #a0a0a0;
+	font-family: 'Roboto', sans-serif; /* Inter */
+	color: #6a6a6a;
 	/* color:#a0a0a0; */
-	font-weight: 400;
+	font-weight: 300;
 	width: 100%;
 	margin: auto;
 	margin-bottom: 0px;
